--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,3 +9,9 @@ background-image: url("../images/nasa.jpg");
 background-size: 100% 100%;
 text-align: center;
 }
+
+label {
+ 
+  display:block;
+
+}
